--- a/.gitconfig
+++ b/.gitconfig
@@ -3,7 +3,7 @@
   email = martin@maillard
 [github]
   user = morphyn
-  token = 
+  token =
 [core]
   autocrlf = true
   safecrlf = true
@@ -18,4 +18,4 @@
   hist = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %C(blue)%an, %cr%Creset' --abbrev-commit --date=short --branches
   pom = push origin master
   st = status
-  todo = grep --heading --line-number --break --ignore-case -e ' FIX: *' -e ' TODO: *'
+  todo = grep --heading --line-number --break --ignore-case -e ' FIX ' -e ' TODO '
