--- a/.gitconfig
+++ b/.gitconfig
@@ -17,7 +17,7 @@
   co = checkout
   dc = diff -cached
   di = diff
-  hist = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %C(blue)%an, %cr%Creset' --abbrev-commit --date=short --branches
+  h = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %C(blue)%an, %cr%Creset' --abbrev-commit --date=short --branches
   pom = push origin master
   st = status
   todo = grep --heading --line-number --break --ignore-case -e ' FIX ' -e ' TODO '
